# YSFLIGHT

./: CONTRIBUTING.md
src/: CMakeLists.txt
src/common/: fsdef.h
src/core/: fschoose.cpp  fschoose.h  fscontrol.cpp  fscontrol.h  fsguiselectiondialogbase.cpp  fshud.cpp  fshud.h  fsnetwork.cpp  fssimulation.cpp  fssimulation.h  fssimulationdemomode.cpp  fsweapon.cpp  fsworld.cpp  fsworld.h
src/graphics/common/: CMakeLists.txt  fsblackout.cpp  fsblackout.h  fsopengl.h  fstexturemanager.cpp  fsvr.cpp  fsvr.h
src/graphics/gl2.0/: fscloudgl2.0.cpp  fsopengl2.0.cpp
src/gui/: fsguinetdialog.cpp  fsmenu.cpp  fsmenu_net.cpp
src/main/: CMakeLists.txt  fsmain.cpp
src/main_consvr/: CMakeLists.txt
src/main_demoOnly/: CMakeLists.txt
src/main_harness/: CMakeLists.txt  fsmainharness.cpp
src/platform/android/: CMakeLists.txt
src/platform/common/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt
src/platform/macosx/: CMakeLists.txt
src/platform/nownd/: CMakeLists.txt
src/platform/win32/: CMakeLists.txt
src/scenery/: ysscenerygl2.0.cpp
src/sounddll/linux-alsa/: CMakeLists.txt
src/sounddll/linux-pulseaudio/: CMakeLists.txt
src/sounddll/macosx/: CMakeLists.txt
src/sounddll/win32/: CMakeLists.txt
src/ui/: fscmdparaminfo.cpp  fscmdparaminfo.h  fsrunloop.cpp
src/voicedll/generic/: CMakeLists.txt
src/ysjoystick/calibrator/: CMakeLists.txt
src/ysjoystick/src/: CMakeLists.txt
